--- a/02- Web_Scrapping_Projects/02- web-scrape-project use BS/scraping data from Multi pages.ipynb
+++ b/02- Web_Scrapping_Projects/02- web-scrape-project use BS/scraping data from Multi pages.ipynb
@@ -3,6 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "699dc282",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,6 +16,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
+   "id": "90dfd143",
    "metadata": {},
    "outputs": [
     {
@@ -406,6 +408,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
+   "id": "33e205c9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -434,6 +437,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
+   "id": "52fbab10",
    "metadata": {},
    "outputs": [
     {
@@ -810,6 +814,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
+   "id": "73046be4",
    "metadata": {},
    "outputs": [
     {
@@ -1403,6 +1408,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
+   "id": "f5c1110b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1447,6 +1453,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
+   "id": "b57310f7",
    "metadata": {},
    "outputs": [
     {
@@ -2926,6 +2933,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
+   "id": "8b62b571",
    "metadata": {},
    "outputs": [
     {
@@ -3081,6 +3089,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "39a3fafc",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -3088,7 +3097,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -3102,7 +3111,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
