--- a/02- Web_Scrapping_Projects/05- Arabia-Pa-Project use Seleuim/Arabia-Pa-Info.ipynb
+++ b/02- Web_Scrapping_Projects/05- Arabia-Pa-Project use Seleuim/Arabia-Pa-Info.ipynb
@@ -9,12 +9,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Install Requiers Lib::\n",
+    "#pip install selenium\n",
+    "#pip install webdriver_manager"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Import requier Liberaries ::\n",
-    "\n",
+    "#-------------------------------\n",
     "from selenium import webdriver\n",
     "from selenium.webdriver.common.by import By\n",
     "from webdriver_manager.chrome import ChromeDriverManager as CDM\n",
@@ -30,23 +41,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\n",
-      "\n",
-      "====== WebDriver manager ======\n",
-      "Current google-chrome version is 95.0.4638\n",
-      "Get LATEST chromedriver version for 95.0.4638 google-chrome\n",
-      "Driver [C:\\Users\\Mido\\.wdm\\drivers\\chromedriver\\win32\\95.0.4638.69\\chromedriver.exe] found in cache\n",
-      "C:\\Users\\Mido\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:3: DeprecationWarning: executable_path has been deprecated, please pass in a Service object\n",
-      "  This is separate from the ipykernel package so we can avoid doing imports until\n",
-      "C:\\Users\\Mido\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:16: DeprecationWarning: find_elements_by_* commands are deprecated. Please use find_elements() instead\n",
-      "  app.launch_new_instance()\n"
+      "C:\\Users\\TECHNO~1\\AppData\\Local\\Temp/ipykernel_4856/1925348231.py:7: DeprecationWarning: executable_path has been deprecated, please pass in a Service object\n",
+      "  driver = webdriver.Chrome(CDM().install())\n"
+     ]
+    },
+    {
+     "ename": "OperationalError",
+     "evalue": "table AraBiaa_details already exists",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mOperationalError\u001b[0m                          Traceback (most recent call last)",
+      "\u001b[1;32mC:\\Users\\TECHNO~1\\AppData\\Local\\Temp/ipykernel_4856/1925348231.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     17\u001b[0m     \u001b[1;31m# Create DataBase to insert data on it also ::\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     18\u001b[0m     \u001b[0mcon\u001b[0m \u001b[1;33m=\u001b[0m  \u001b[0mS\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mconnect\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Arab-Paa.db\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 19\u001b[1;33m     con.execute(\"\"\"create table AraBiaa_details ( Publisher str, Name str, Job str, Country str ,\n\u001b[0m\u001b[0;32m     20\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     21\u001b[0m                     Phone str , Fax str, Mobile str , E_mail str , WebSite str)\"\"\")\n",
+      "\u001b[1;31mOperationalError\u001b[0m: table AraBiaa_details already exists"
      ]
     }
    ],
@@ -61,14 +75,14 @@
     "driver.get(url)\n",
     "\n",
     "# Create CSV to inset data on it ::\n",
-    "with open(\"Arab-Pa.csv\" , \"w+\") as f :\n",
+    "with open(\"Arab-Paa.csv\" , \"w+\") as f :\n",
     "    \n",
     "    writer = csv.DictWriter(f , fieldnames=[\"Publisher\" ,\n",
     "                                            \"Name\" , \"Job\" , \"Country\" ,\n",
     "                                            \"Phone\" , \"Fax\" , \"Mobile\" , \"E_mail\" , \"WebSite\"])\n",
     "    writer.writeheader()\n",
     "    # Create DataBase to insert data on it also ::\n",
-    "    con =  S.connect(\"Arab-Pa.db\")\n",
+    "    con =  S.connect(\"Arab-Paa.db\")\n",
     "    con.execute(\"\"\"create table AraBiaa_details ( Publisher str, Name str, Job str, Country str ,\n",
     "    \n",
     "                    Phone str , Fax str, Mobile str , E_mail str , WebSite str)\"\"\")\n",
@@ -140,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -398,7 +412,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -412,7 +426,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
